<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_me">Me</string>
    <string name="title_plan">Plan</string>
    <string name="default_plan_text">Hello World!</string>
    <string name="default_plan_time_day">29日</string>
    <string name="default_home_text">每一天都是新的日子，
        走运当然是好的，
        不过我情愿做到分毫不差。
        希望我们都能成为
        在运气到来时做好准备的人。</string>
    <string name="home_non_complete">未完成计划数</string>
    <string name="home_complete">已完成计划数</string>
    <string name="home_non_complete_num">2</string>
    <string name="home_complete_num">29</string>
    <string name="me_week_name">周日</string>
    <string name="me_day_num">08</string>
    <string name="me_month_signed">本月已签2次</string>
    <string name="ground_title">Ground</string>
    <string name="ground_default_show_text">这是广场</string>
    <string name="me_default_thing_title">2020年10月24日</string>
    <string name="me_default_thing_body">哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</string>
    <string name="me_default_thing_date">2020–10–24 21:00</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="category">Category</string>
    <string name="history">History</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="set_date_and_time">Set reminder date and time</string>
    <string name="add_to_category">Add to category</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category">Enter category</string>
    <string name="update_category">Update Category</string>
    <string name="please_add_task">Please add task</string>
    <string name="please_add_title">Please add title</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="category_added">Category Added</string>
    <string name="please_enter_category_to_add">Please enter category to add</string>
    <string name="update">UPDATE</string>
    <string name="category_updated">Category updated</string>
    <string name="please_edit_category_to_update">Please edit category to update</string>
    <string name="delete">DELETE</string>
    <string name="category_deleted">Category deleted</string>
    <string name="please_enter_something_to_update">Please enter something to update</string>
    <string name="no_category_to_display">No category to display</string>
    <string name="no_task_to_show">No task to show</string>
    <string name="no_history_to_show">No History to show</string>
    <string name="do_you_want_to_save_this_task">Do you want to save this task?</string>
    <string name="save_task">Save task!</string>
    <string name="save">SAVE</string>
    <string name="please_click_again_to_exit">Please click again to exit</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="get_started">Get started</string>
    <string name="phone_btn_next">下一步</string>
</resources>