<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="luck7.com.self.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_me"
            android:name="luck7.com.self.ui.me.MeFragment"
            android:label="@string/title_me"
            tools:layout="@layout/fragment_me"/>

    <fragment
            android:id="@+id/navigation_plan"
            android:name="luck7.com.self.ui.plan.PlanFragment"
            android:label="@string/title_plan"
            tools:layout="@layout/fragment_plan"/>
    <fragment
            android:id="@+id/navigation_ground"
            android:name="luck7.com.self.ui.ground.GroundFragment"
            android:label="@string/ground_title"
            tools:layout="@layout/fragment_ground"/>
</navigation>