<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="luck7.com.self.ui.home.HomeFragment">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="400dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/relativeLayout2">
        <ImageView
                android:id="@+id/home_body_background"
                android:background="@color/White"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"/>

        <ImageView android:layout_width="300dp"
                   android:layout_height="match_parent"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="48dp"
                   android:layout_alignTop="@id/home_body_background"
                   android:layout_alignBottom="@id/home_body_background"
                   android:layout_marginBottom="48dp"
                   android:background="@color/colorLightBlue"
                   android:id="@+id/home_body_background_color"/>

        <TextView android:layout_width="240dp"
                  android:layout_height="240dp"
                  android:layout_alignTop="@id/home_body_background_color"
                  android:layout_alignStart="@id/home_body_background_color"
                  android:layout_marginTop="24dp"
                  android:layout_marginStart="24dp"
                  android:textSize="10pt"
                  android:text="@string/default_home_text"/>

    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/relativeLayout3">
        <ImageView
                android:id="@+id/home_complete_background"
                android:background="@color/White"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:layout_alignStart="@id/home_complete_background"
                  android:textSize="12pt"
                  android:layout_centerVertical="true"
                  android:layout_alignTop="@id/home_complete_background"
                  android:padding="5pt"
                  android:text="@string/home_non_complete"/>

        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:layout_alignEnd="@id/home_complete_background"
                  android:textSize="12pt"
                  android:layout_centerVertical="true"
                  android:layout_alignTop="@id/home_complete_background"
                  android:padding="5pt"
                  android:layout_marginEnd="16dp"
                  android:text="@string/home_non_complete_num"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/relativeLayout4"
            android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <ImageView
                android:id="@+id/home_incomplete_background"
                android:background="@color/White"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:layout_alignStart="@id/home_incomplete_background"
                  android:textSize="12pt"
                  android:layout_centerVertical="true"
                  android:layout_alignTop="@id/home_incomplete_background"
                  android:padding="5pt"
                  android:text="@string/home_complete"/>

        <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:layout_alignEnd="@id/home_incomplete_background"
                  android:textSize="12pt"
                  android:layout_centerVertical="true"
                  android:layout_alignTop="@id/home_incomplete_background"
                  android:padding="5pt"
                  android:layout_marginEnd="16dp"
                  android:text="@string/home_complete_num"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>