<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:id="@+id/title_plan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="8dp"

    >


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Task"
                android:layout_alignParentBottom="true"
                android:textSize="10pt"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorSelf"
        />

        <Button
                android:id="@+id/add_task_back"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="Back"
                android:textSize="8pt"
                android:background="@color/colorSelf"
                android:textColor="@color/White"
        />

    </RelativeLayout>

        <TextView
                android:id="@+id/txtTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/task_title"
                android:textColor="@color/colorSelf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_plan" />

        <EditText
                android:id="@+id/edtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/enter_task_title"
                android:inputType="textCapSentences"
                android:singleLine="true"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTaskTitle" />

        <TextView
                android:id="@+id/txttask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/what_is_to_be_done"
                android:textColor="@color/colorSelf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

        <EditText
                android:id="@+id/edtTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/enter_your_task"
                android:inputType="textCapSentences"
                android:singleLine="true"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txttask" />

        <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/set_date_and_time"
                android:textColor="@color/colorSelf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTask" />

        <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_to_category"
                android:textColor="@color/colorSelf"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayoutTime" />

        <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

            <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@+id/imgAddCategory" />

            <ImageView
                    android:id="@+id/imgAddCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_playlist_add_black_24dp"
                    android:tint="@color/colorSelf" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/relativeLayoutDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

            <EditText
                    android:id="@+id/edtSetDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/imgCancelDate"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:drawableTint="@color/colorAccent"
                    android:focusable="false"
                    android:hint="@string/set_date" />

            <ImageView
                    android:id="@+id/imgCancelDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_cancel_black_24dp"
                    android:tint="@color/colorSelf"
                    android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/relativeLayoutTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayoutDate">

            <EditText
                    android:id="@+id/edtSetTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/imgCancelTime"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/ic_access_time_black_24dp"
                    android:drawableTint="@color/colorAccent"
                    android:focusable="false"
                    android:hint="@string/set_time" />

            <ImageView
                    android:id="@+id/imgCancelTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_cancel_black_24dp"
                    android:tint="@color/colorAccent"
                    android:visibility="gone" />
        </RelativeLayout>

        <Button android:layout_width="72dp" android:layout_height="36dp"
                app:layout_constraintTop_toTopOf="@id/relativeLayout"
                android:layout_marginTop="196dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/plan_btn_add"
                android:text="Submit"
                android:textColor="@color/White"/>




</androidx.constraintlayout.widget.ConstraintLayout>